# rime-android

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build.gradle.kts  config.properties  patch-librime  settings.gradle  trime-v3.2.16.patch  trime.patch
.github/workflows/: android.yml
app/: build.gradle  build.gradle.kts  proguard-rules-debug.pro  release.keystore
app/src/androidTest/java/pers/zhc/android/rime/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/pers/zhc/android/rime/: IME.kt  ImeSettingsActivity.kt  InputTestActivity.kt  KeyTestActivity.kt  Logging.kt  MainActivity.kt  MyApplication.kt  RimeConfigs.kt  Session.kt
app/src/main/java/pers/zhc/android/rime/annotation/: CheckReturnValue.kt
app/src/main/java/pers/zhc/android/rime/jni/: Context.kt  Engine.kt  Key.kt  Rime.kt  Session.kt
app/src/main/java/pers/zhc/android/rime/rime/: Context.kt  Engine.kt  JNI.kt  Key.kt  KeyEvent.kt  Keys.kt  Rime.kt  Session.kt
app/src/main/res/layout/: activity_main.xml  deploying_dialog.xml  ime_candidate_item.xml  ime_candidate_view.xml  ime_candidates_view.xml  ime_settings_activity.xml  input_test_activity.xml  key_test_activity.xml
app/src/main/res/values/: array.xml  attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: input_method.xml
app/src/main/rust/: .gitignore  Cargo.toml
app/src/main/rust/src/: helper.rs  jni.rs  lib.rs
gradle/wrapper/: gradle-wrapper.properties
tools/: trime-build-librime
(+5 files in other folders)
