[package]
name = "rime_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
librime-sys = "0.4.0"
#rime-api = "0.4.1"
rime-api = { path = "/home/bczhc/code/rime-api", version = "0.4.2" }
anyhow = "1.0.71"

[profile.release]
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
