[package]
name = "rime_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
librime-sys = "0.4.0"
#rime-api = "0.6.0"
rime-api = { path = "/home/bczhc/code/rime-api", version = "0.9.0" }
anyhow = "1.0.71"
once_cell = "1.17.1"

[profile.release]
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
